<?xml version="1.0" encoding="utf-8"?>
<layout>
  <data>
    <variable
        name="welcome"
        type="cn.mrzhqiang.randall.ui.WelcomeActivity"
        />
  </data>
  <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:title="@string/app_name"
          >
      </android.support.v7.widget.Toolbar>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          >
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            >
          <ImageView
              android:layout_width="240dp"
              android:layout_height="240dp"
              android:contentDescription="@string/application_logo"
              android:src="@drawable/ic_launcher_web"
              />
        </FrameLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_header"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="web"
            android:text="@string/welcome_text"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:onClick="@{welcome.addUid}"
            android:text="@string/add_uid"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/welcome_developer"
            android:textSize="12sp"
            />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>
</layout>
