<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data>
    <variable
        name="addUid"
        type="cn.mrzhqiang.randall.ui.AddUidActivity"
        />
  </data>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/add_uid"
        >
    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >
      <ImageView
          android:layout_width="120dp"
          android:layout_height="45dp"
          android:layout_gravity="center"
          android:contentDescription="@string/game_logo"
          android:visibility="@{addUid.logoVisibility}"
          app:gameLogo="@{addUid.gamePath}"
          tools:visibility="visible"
          />
      <ProgressBar
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:visibility="@{addUid.loadVisibility}"
          android:layout_gravity="center"
          />
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        >
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:counterEnabled="true"
          app:counterMaxLength="15"
          app:error="@{addUid.usernameError}"
          app:errorEnabled="true"
          >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uid"
            android:inputType="textVisiblePassword"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:text="@={addUid.username}"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />
      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:error="@{addUid.passwordError}"
          app:errorEnabled="true"
          app:passwordToggleEnabled="true"
          >
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={addUid.password}"
            android:textAppearance="@style/TextAppearance.AppCompat"
            />
      </android.support.design.widget.TextInputLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_hint"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{addUid.chooseServer}"
            android:text="@={addUid.serverName}"
            tools:text="[永恒]"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            />
      </LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{addUid.register}"
            android:text="@string/register"
            style="@style/Widget.AppCompat.Button.Colored"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="@{addUid.login}"
            android:text="@string/login"
            style="@style/Widget.AppCompat.Button.Colored"
            />
      </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@{addUid.gameInfo}"
          tools:text="荣唐科技 10-20 15:09"
          />
    </FrameLayout>
  </LinearLayout>
</layout>
